Change icons for dark and light mode buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -333,12 +333,12 @@ body.light-mode #main_content td {
 
       <div class="modal-btns">
         <button id="modal-keep-dark-btn" class="btn-primary">
-          <span class="m-en">🌑 Keep Dark Mode</span>
-          <span class="m-zh">🌑 保持深色 (推荐)</span>
+          <span class="m-en">🌙 Keep Dark Mode</span>
+          <span class="m-zh">🌙 保持深色 (推荐)</span>
         </button>
         <button id="modal-switch-light-btn" class="btn-secondary">
-          <span class="m-en">☀️ Switch to Light Mode</span>
-          <span class="m-zh">☀️ 切换到浅色</span>
+          <span class="m-en">🔆 Switch to Light Mode</span>
+          <span class="m-zh">🔆 切换到浅色</span>
         </button>
       </div>
 
