--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -350,19 +350,15 @@
       <span>📽️ 3D INTERACTIVE VIEW</span>
       <span class="video-close" onclick="closeVideoModal()">×</span>
     </div>
-    
-    <model-viewer
-      src="{{ page.glb_path | relative_url }}"
-      alt="3D Model"
-      auto-rotate
-      camera-controls
-      shadow-intensity="1"
-      style="width: 100%; height: 500px; background-color: #0f172a;"
-    ></model-viewer>
-    
-  </div>
-</div>
-{% endif %}
+
+   <model-viewer 
+  src="{{ page.glb_path }}" 
+  alt="3D Model"
+  auto-rotate
+  camera-controls
+  shadow-intensity="1"
+  style="width: 100%; height: 500px; background-color: #0f172a;"
+></model-viewer>
 
 <div id="welcome-modal" class="welcome-modal">
   <div class="modal-content">
